# gorgonzola

./: Cargo.toml  Dockerfile  docker-compose.yaml  requests.http
.cargo/: config.toml
migrations/: 20251223002511_init.sql
src/: commands.rs  main.rs
