[package]
name = "gorgonzola"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
poise = "0.6.1"
rustls = { version = "0.23.35", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
tokio = { version = "1.48.0", features = ["full"] }
